--- a/README
+++ b/README
@@ -1,5 +1,56 @@
-Recoverytracker
+Recovery Tracker
 ========================
+
+rm -rf ~/workspace/ruby/rails/recoverytracker
+cd ~/workspace/ruby/rails
+rvm use 1.9.3
+rvm gemset create recoverytracker
+rvm use 1.9.3@recoverytracker
+gem install rails --no-ri --no-rdoc
+gem install rails_apps_composer --no-ri --no-rdoc
+rails_apps_composer new recoverytracker -r home_page devise add_user rspec action_mailer html5 cleanup extras git seed_database capybara guard inherited_resources simple_form
+
+echo 'rvm use 1.9.3@recoverytracker' >> recoverytracker/.rvmrc
+
+cd recoverytracker
+
+mate Gemfile
+# ADD GEMS (HEROKU, ETC)
+
+bundle
+
+# Add the following to application.rb:
+# config.assets.initialize_on_precompile = false
+
+
+
+rails g controller users index show create update destroy new edit
+rails g bootstrap:themed Users -f 
+
+# Tweak seeds file
+
+# Add the following to application.css.scss
+*= require bootstrap_and_overrides
+
+bundle exec rake db:seed
+
+rails g heroku:config
+
+# Tweak heroku.yml
+# Change authorization method in heroku-rails gem
+
+git remote add origin https://github.com/gunnertech/recoverytracker.git
+git remote set-url origin git@github.com:gunnertech/recoverytracker.git
+git add .
+git commit -am "first commit"
+git push -u origin master
+
+bundle exec rake all heroku:setup
+bundle exec rake all heroku:deploy;
+heroku run rake db:migrate --app recoverytracker-staging;
+heroku run rake db:seed --app recoverytracker-staging;
+heroku run rake db:migrate --app recoverytracker;
+
 
 
 ________________________
