--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  alltime_leaderboard: "All Time Leaderboard"
   todays_leaderboard: "Today's Leaderboard"
   follow_on_twitter: "Follow @%{name} on Twitter"
   add_question: 'Add Question'
