--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,14 +2,47 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  download_csv: "Download"
+  surveys: Surveys
+  divisions: Divisions
+  language: Language
+  edit_account: Edit Account
+  log_in: Log In
+  log_out: Log Out
+  english: English
+  english_alt: 'Inglés'
+  spanish_alt: "Español"
+  spanish: Spanish
+  next: "Next"
+  prev: "Previous"
+  download: "Download"
+  leaderboards: "Leaderboards"
+  your_score: "Your Score"
+  rank: "Rank"
+  score: "Score"
+  name: "Name"
+  last_30_days: "Last 30 Days"
+  follow_us: "Follow Us"
+  latest_tweets: "Latest Tweets"
+  history: "History"
+  view_leaderboards: "View Leaderboards"
+  follow_on_twitter: "Follow On Twitter"
   alltime_leaderboard: "All Time Leaderboard"
   todays_leaderboard: "Today's Leaderboard"
   follow_on_twitter: "Follow @%{name} on Twitter"
   add_question: 'Add Question'
   hello: "Hello world"
-  date_slug: "Date Taken"
+  date_taken: "Date Taken"
   position_hint: "The order you'd like this to appear in"
+  record_metric: "Record Metric"
+  completed_surveys: "Completed Surveys"
+  last_x_days: "Last %{number} Days"
+  metrics: "Metrics"
+  metric: "Metric"
+  value: "Value"
+  recorded_on: "Recorded On"
+  helpers:
+    links:
+      edit: "Edit"
   time:
     formats:
       picker: "%m/%d/%Y"
@@ -20,4 +53,3 @@ en:
       time_only: '%l %p'
       long: '%B %d, %Y %l %p'
       input: '%m/%d/%Y %I:%M %p'
-  
