--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,8 @@
 es:
+  current_members: Miembros Actuales
+  admin: Administración
+  submit_answers: Presentar Respuestas
+  signed_in_as: Firmado en como
   surveys: Encuestas
   divisions: Divisiones
   language: Idioma
