--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,6 @@
 es:
+  scale: Scale
+  tips_for_improvement: Tips for Improvement
   current_members: Miembros Actuales
   admin: Administración
   submit_answers: Presentar Respuestas
