--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,8 +2,10 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  save: Save
   scale: Scale
   tips_for_improvement: Tips for Improvement
+  
   submit_answers: Submit Answers
   surveys: Surveys
   divisions: Divisions
