--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,8 +1,8 @@
 es:
-  sign_in: Sign In
-  save: Save
-  scale: Scale
-  tips_for_improvement: Tips for Improvement
+  sign_in: Sign In: Registrarse
+  save: Salvar
+  scale: Nivel
+  tips_for_improvement: Consejos para el Mejoramiento
   
   current_members: Miembros Actuales
   admin: Administración
