--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,5 @@
 es:
-  sign_in: Sign In: Registrarse
+  sign_in: Registrarse
   save: Salvar
   scale: Nivel
   tips_for_improvement: Consejos para el Mejoramiento
