adds measure ability

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@
 
 en:
   surveys_assigned_to: "Surveys Assigned to %{to}"
-  
+  choose_division: Choose Division
   sign_in: Sign In
   save: Save
   scale: Scale
